<resources>
    <string name="app_name">MyDistanceTrackerApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_continue">Continue</string>
    <string name="my_dummy">welcome to distance tracker app . it needs permission to run the app. so please to be patient.. to do something.dummy</string>
    <string name="permission_title">permissionWarning</string>
    <string name="tap_on_my_location_button">Tap on My Location Button.</string>
    <string name="text_start">Start</string>
    <string name="text_stop">Stop</string>
    <string name="test_reset">Reset</string>
    <string name="_3">3</string>
    <string name="distance">Distance</string>
    <string name="_0_0km">0.0km</string>
    <string name="time">time</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="button">Button</string>
    <string name="result">%1$s km</string>
</resources>